apps/files/nextcloud-Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nextcloud-gateway
  namespace: nextcloud
  labels:
    app-name: nextcloud
    version: "${NEXTCLOUD_VERSION}"
    component: cloud-file-server
    hostNetwork: "no"
    internal-service: "no"
    managed-by: chynten
    created-by: chynten
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - $NEXTCLOUD_DOMAIN
    tls:
      httpsRedirect: true
  - hosts:
      - $NEXTCLOUD_DOMAIN
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: nextcloud-letsencrypt-certificate
